[package]
name = "elf2uf2-rs"
version = "2.0.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

description = "Port of elf2uf2 to rust"
documentation = "https://docs.rs/elf2uf2-rs"
readme = "README.md"
license = "0BSD"
repository = "https://github.com/JoNil/elf2uf2-rs"

[dependencies]
assert_into = "1.1"
clap = { version = "4", features = ["derive"] }
once_cell = "1.5"
pbr = "1"
serialport = { version = "4", optional = true }
static_assertions = "1"
sysinfo = "0.29"
zerocopy = { version = "0.7", features = ["derive"] }
ctrlc = "3.4"

[features]
default = ["serial"]
serial = ["serialport"]
