[package]
name = "elf2uf2-rs"
version = "2.2.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

description = "Port of elf2uf2 to rust"
documentation = "https://docs.rs/elf2uf2-rs"
readme = "README.md"
license = "0BSD"
repository = "https://github.com/JoNil/elf2uf2-rs"

[dependencies]
assert_into = "1.1"
clap = { version = "4", features = ["derive"] }
pbr = "1"
serialport = { version = "4", optional = true }
static_assertions = "1"
sysinfo = "0.32"
zerocopy = { version = "0.8", features = ["derive"] }
ctrlc = "3.4"
elf = "0.8"

[features]
default = ["serial"]
serial = ["serialport"]
