[workspace]
resolver = "3"

members = ["crates/*"]
default-members = ["crates/elf2uf2-rs"]

[workspace.package]
version = "2.2.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2024"
readme = "README.md"
license = "0BSD"
repository = "https://github.com/JoNil/elf2uf2-rs"

[workspace.dependencies]
assert_into = "1.1"
clap = { version = "4", features = ["derive"] }
pbr = "1"
serialport = { version = "4" }
static_assertions = "1"
sysinfo = "0.32"
zerocopy = { version = "0.8", features = ["derive"] }
ctrlc = "3.4"
elf = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
