[package]
name = "elf2uf2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

readme = "README.md"

description = "The core library behind elf2uf2-rs"
documentation = "https://docs.rs/elf2uf2-core"

[features]
default = ["clap"]

[dependencies]
assert_into = { workspace = true }
static_assertions = { workspace = true }
zerocopy = { workspace = true }
elf = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
clap = { workspace = true, optional = true }
