[package]
name = "elf2uf2-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/JoNil/elf2uf2-rs/tree/main/crates/elf2uf2-rs"
categories = ["command-line-utilities", "embedded"]
description = "A tool to help flash elf2 files to microcontrollers"
keywords = ["rp2040", "pico", "elf2uf2", "elf2uf2-rs", "rp2350"]
documentation = "https://docs.rs/elf2uf2-rs"

[dependencies]
elf2uf2-core = { version = "2.2.0", path = "../elf2uf2-core" }

log = { workspace = true }
clap = { version = "4", features = ["derive"] }
pbr = "1"
serialport = { version = "4" }
ctrlc = "3.4"
env_logger = "0.11"
anyhow = "1.0"
sysinfo = "0.32"
