[package]
name = "elf2uf2-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true

description = "Port of elf2uf2 to rust"
documentation = "https://docs.rs/elf2uf2-rs"

[dependencies]
elf2uf2-core = { version = "2.2.0", path = "../elf2uf2-core", features = [ "clap" ] }

clap = { workspace = true }
pbr = { workspace = true }
serialport = { workspace = true, optional = true }
sysinfo = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["serial"]
serial = ["serialport"]
